--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    
     "db:seed:mac": "NODE_ENV=production NITRO_PRESET=node-server tsx scripts/seed.ts",
     "db:seed:win": "set NODE_ENV=production && set NITRO_PRESET=node-server && tsx scripts/seed.ts --reset",
-
     "db:seed": "set NODE_ENV=production && set NITRO_PRESET=node-server && tsx scripts/seed.ts --reset",
     "db:reset": "db:seed -- --reset",
     "test": "vitest run"
@@ -26,6 +24,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-form": "^1.28.0",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
@@ -40,11 +39,13 @@
     "nitro": "npm:nitro-nightly@latest",
     "pg": "^8.18.0",
     "postgres": "^3.4.8",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "vite-tsconfig-paths": "^6.0.2"
+    "vite-tsconfig-paths": "^6.0.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tanstack/devtools-vite": "^0.3.11",
